<resources>
    <string name="app_name">PlaceTalkr</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="action_logout">Logout</string>
    <string name="title_activity_login">Login</string>
    <string name="txtUsername">Username</string>
    <string name="txtPassword">Password</string>
    <string name="login">Login</string>
    <string name="title_activity_register">Register</string>
    <string name="register">Register</string>
    <string name="txtEmail">Email</string>
    <string name="txtFName">First Name</string>
    <string name="txtLName">Last Name</string>
    <string name="txtConfirmPassword">Confirm Password</string>
    <string name="registerHere">Don\'t have an account? Register Here.</string>
    <string name="btnPost">Post</string>
    <string name="title_activity_post_details">PostDetailsActivity</string>
    <string name="title_activity_comments">Comments</string>
    <string name="menuitem_refresh">Refresh</string>
    <string name="action_findPlace">Not Here?</string>
    <string name="btnSubmit">Submit</string>
    <string name="txtComment">Comments: </string>
    <string name="profile">My Profile</string>
    <string name="drawer_open">Open navigation drawer</string>
    <string name="drawer_close">Close navigation drawer</string>
    <string name="title_activity_profile">Profile</string>
    <string name="title_activity_add_friend">Add Friend</string>
    <string name="menu_search">Search</string>
    <string name="title_activity_base">BaseActivity</string>
    <string name="title_activity_settings">Settings</string>

    <!-- Strings related to Settings -->

    <!-- Example General settings -->
    <string name="pref_header_general">General</string>

    <string name="pref_title_social_recommendations">Enable social recommendations</string>
    <string name="pref_description_social_recommendations">Recommendations for people to contact
        based on your message history
    </string>

    <string name="pref_title_display_name">Display name</string>
    <string name="pref_default_display_name">John Smith</string>

    <string name="pref_title_add_friends_to_messages">Add friends to messages</string>
    <string-array name="pref_example_list_titles">
        <item>Always</item>
        <item>When possible</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_example_list_values">
        <item>1</item>
        <item>0</item>
        <item>-1</item>
    </string-array>

    <!-- Example settings for Data & Sync -->
    <string name="pref_header_data_sync">Data &amp; sync</string>

    <string name="pref_title_sync_frequency">Sync frequency</string>
    <string-array name="pref_sync_frequency_titles">
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>3 hours</item>
        <item>6 hours</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_sync_frequency_values">
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>180</item>
        <item>360</item>
        <item>-1</item>
    </string-array>

    <string name="pref_title_system_sync_settings">System sync settings</string>

    <!-- Example settings for Notifications -->
    <string name="pref_header_notifications">Notifications</string>

    <string name="pref_title_new_message_notifications">New message notifications</string>

    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_ringtone_silent">Silent</string>

    <string name="pref_title_vibrate">Vibrate</string>
</resources>
