<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group
        android:id="@+id/menu_top"
        android:checkableBehavior="single">
        <item
            android:id="@+id/navProfile"
            android:icon="@drawable/ic_profile"
            android:title="@string/profile" />
        <item
            android:id="@+id/navNotHere"
            android:icon="@drawable/ic_not_here"
            android:title="@string/action_findPlace" />
    </group>
    <group
        android:id="@+id/menu_friends"
        android:checkableBehavior="single">
        <item
            android:id="@+id/navAddFriend"
            android:icon="@drawable/ic_add_friend"
            android:title="@string/title_activity_add_friend" />
    </group>
    <group
        android:id="@+id/menu_bottom"
        android:checkableBehavior="single">
        <item
            android:id="@+id/navLogout"
            android:icon="@drawable/ic_logout"
            android:title="@string/action_logout" />
    </group>
</menu>